ingress-deployment/movie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
spec:
  selector:
    matchLabels:
      app: movie-service
      type: backend
  template:
    metadata:
      name: movie
      labels:
        app: movie-service
        type: backend
    spec:
      containers:
        - name: movie
          image: aviu95/movie
          imagePullPolicy: IfNotPresent
