ingress-deployment/movie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  type: ClusterIP
  selector:
    app: movie-service
    type: backend
  ports:
  - name: http
    port: 8080
