ingress-deployment/music-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-service
spec:
  type: ClusterIP
  selector:
    app: music-service
    type: backend
  ports:
  - name: http
    port: 8080
