ingress-deployment/microservic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - http:
        paths:
          - path: /movie
            backend:
              serviceName: movie-service
              servicePort: 8080
